fix: remove scrollbar, add margin to profile button

--- a/lumium-space/src/styles/global.css
+++ b/lumium-space/src/styles/global.css
@@ -5,4 +5,5 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  overflow: hidden;
 }
